# bix

./: .gitignore  CHANGELOG.md  README.md  main_bix.py  main_bix_matplotlib.pybak  pyproject.toml  requirements.txt
bix/: constants.py  utils.py  worker_ble.py
bix/gui/: gui.py  gui.ui  populate.py  tables.py
scripts/: run_bix.sh
tests/: 2508700_BIL_20250923_184053_TDO.csv  bil_beh_9999999.toml  bil_scc_9999999.toml  bil_scf_example.toml  bil_v2_logger_aliases.toml  bil_v5_logger_aliases.toml  main_test_macos.py
